# Bi-Code

./: .gitignore  README.md  install.sh  uninstall.sh
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: icons.js  ide.css  ide.js  index.html
ui/editor/: code-editor.js
ui/editor/core/: autocomplete.js  buffer.js  editor.js  find.js  history.js  input.js  render.js
ui/editor/syntax/: highlight.js  languages.js
