[package]
name = "editor-ide"
version = "0.1.0"
description = "A VSCode-like IDE built with Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "editor_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
portable-pty = "0.8"
tiny_http = "0.12"
ureq = "2"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
